--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -48,9 +48,9 @@
     "build": "tsup-node",
     "dev": "tsup-node --watch",
     "prepack": "pnpm build",
-    "test": "pnpm run /^(build|test:ci)$/",
-    "test:dev": "pnpm run /^(build|test:dev:.*)/",
-    "test:ci": "pnpm run /^(build|test:ci:.*)/",
+    "test": "pnpm run '/^(build|test:ci)$/'",
+    "test:dev": "pnpm run '/^(build|test:dev:.*)/'",
+    "test:ci": "pnpm run '/^(build|test:ci:.*)/'",
     "test:dev:vitest": "vitest",
     "test:dev:vitest:watch": "vitest watch",
     "test:ci:vitest": "vitest run",
