--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -53,10 +53,10 @@
     "build": "tsup-node",
     "prepack": "pnpm run build",
     "test": "pnpm run test:ci",
-    "test:dev": "pnpm run /^(build|test:dev:.*)$/",
+    "test:dev": "pnpm run '/^(build|test:dev:.*)$/'",
     "test:dev:tsd": "tsd",
     "test:dev:vitest": "vitest",
-    "test:ci": "pnpm run /test:ci:.*/",
+    "test:ci": "pnpm run '/test:ci:.*/'",
     "test:ci:vitest": "pnpm run build && vitest run",
     "publint": "npx -y publint --strict"
   },
