chore: remove not existing files from package.json#files

--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -25,8 +25,7 @@
   "files": [
     "dist/**/*",
     "dist-dev/**/*",
-    "deno/**/*",
-    "server.d.ts"
+    "deno/**/*"
   ],
   "scripts": {
     "build": "tsup-node",
