--- a/packages/images/package.json
+++ b/packages/images/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@netlify/dev-utils": "^3.1.1",
     "image-size": "^2.0.2",
+    "js-image-generator": "^1.0.4",
     "tsup": "^8.5.0",
     "vitest": "^3.1.4"
   },
