--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -50,7 +50,9 @@
     "test": "test"
   },
   "devDependencies": {
-    "@netlify/types": "2.0.2"
+    "@netlify/types": "2.0.2",
+    "tsup": "^8.0.0",
+    "vitest": "^3.0.0"
   },
   "dependencies": {
     "@netlify/dev-utils": "3.1.1",
